# turkmedstt

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/demo/: app.py  (+1 more)
configs/: benchmark_models_20.csv
docs/: HUGGINGFACE_RELEASE.md  REPRODUCIBILITY.md  RESULTS.md
huggingface/: README_v1.md  README_v2_medical.md  inference.py  modeling_multitask_token_editor.py
postprocessing/: __init__.py  requirements.txt
reports/: V1_V2_FINAL_RESULTS.md  multitask_token_editor_v3_final_evaluation.json  postprocessor_v2_medical_synthetic_evaluation.json  release_manifest.json
results/: README.md
scripts/: analyze_multitask_token_editor.py  analyze_v2_bootstrap.py  audit_datasets.py  build_finetune_subset.py  build_medical_corpus_v3.py  build_medical_synthetic_pairs.py  build_multitask_token_edit_dataset.py  clean_datasets.py  compare_ascs_emotion_models.py  evaluate_lora_adapter.py  evaluate_multitask_token_editor.py  infer_multitask_token_editor.py  merge_lora.py  prepare_hf_general_benchmark_release.py  prepare_hf_releases.py  run_ascs_emotion_text.py  run_benchmark_matrix.py  speech_shared.py  summarize_benchmark_matrix.py  train_lora_whisper_v2.py  train_multitask_token_editor.py  upload_hf_releases.py  validate_medical_corpus_v3.py
static/: app.js  index.html  styles.css
tests/: test_metrics.py  test_text_utils.py
turkmed_stt/: __init__.py  affective_pipeline.py  app.py  ascs.py  audio.py  benchmark.py  manifest.py  metrics.py  normalization.py  reports.py  stt_core.py
(+26 files in other folders)
