[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "turkmed-stt"
version = "0.1.0"
description = "TurkMedSTT — Turkish Medical Speech Recognition"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0",
    "soundfile",
    "jiwer",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["turkmed_stt*", "postprocessing*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Pyflakes + import order as the CI gate on this research codebase.
select = ["F", "I"]
ignore = ["F401", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
